Your descriptive commit message

--- a/stopwatch.html
+++ b/stopwatch.html
@@ -22,7 +22,7 @@
     </div>
 
     <div class="clock-title">
-        <h1>CLOCK</h1>
+        <h1>STOPWATCH</h1>
     </div>
 
     <div class="container">
@@ -52,16 +52,6 @@
             <span style="--i: 12"><b>12</b></span>
         </div>
 
-        <div class="timezone-container">
-            <label for="timezone-select">Select Time Zone:</label>
-            <select id="timezone-select">
-                <option value="">Local Time</option>
-                <option value="Asia/Jakarta">Jakarta</option>
-                <option value="Asia/Tokyo">Tokyo</option>
-                <option value="America/New_York">New York</option>
-                <option value="Europe/London">London</option>
-            </select>
-        </div>
     </div>
 
     
